<resources>
    <string name="app_name">FoodLife</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="foodlife">FoodLife</string>
    <string name="title">Title</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="create">create</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="grocery">grocery</string>
    <string name="recipe">recipe</string>
    <string name="utility">utility</string>
    <string name="pantry">pantry</string>
    <string name="sign_out">Sign out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="suggestions">Suggestions</string>
    <string name="search">Search</string>
    <string name="ingredients_needed">Ingredients Needed</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="directions">Directions</string>
    <string name="add_instructions">Add Instructions</string>
    <string name="add">Add</string>
    <string name="cookbook">cookbook</string>
    <string name="recipes">Recipes</string>
    <string name="groceries">Groceries</string>
    <string name="settings">Settings</string>
    <string name="utilities">Utilities</string>
    <string name="edit">Edit</string>

    <string name="client_id">811054528070-hpiup82em2g2msdtn9d1a169onn65ce2.apps.googleusercontent.com</string>
    <string name="enter">Enter</string>
    <string name="quick_note">Quick Note</string>
    <string name="add_new_item">Add new item..</string>
    <string name="expiration">Description</string>
    <string name="guest">Guest</string>
    <string name="item">Item</string>
    <string name="expiration_date_mm_dd_yy">Expiration Date (MM/DD/YY)</string>
    <string name="select_expiration_date">Select Expiration Date</string>
    <string name="select_expiration_date_mm_dd_yyyy">Select Expiration Date (MM/DD/YYYY)</string>
    <string name="title_activity_recipe_suggestions">recipeSuggestions</string>
    <string name="enter_your_query">Search Recipes</string>
    <string name="go">Go!</string>
    <string name="search2">Search!</string>
    <string name="start">Start</string>
    <string name="back">BACK</string>
    <string name="reset">RESET</string>
    <string name="amount">Amount</string>
    <string name="new_unit">New Unit</string>
    <string name="ingredient">Ingredient</string>
    <string name="current_unit">Current Unit</string>
</resources>
