<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/suggestions_button"
        android:icon="@drawable/ic_find_in_page_white_36dp"
        android:title="@string/suggestions"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/search_button"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/search"
        android:orderInCategory="20"
        app:showAsAction="always"/>

    <item android:id="@+id/cook_book"
        android:icon="@drawable/ic_notebook_white_36dp"
        android:title="@string/cookbook"
        android:orderInCategory="0"
        app:showAsAction="ifRoom"/>

</menu>