<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Update Note -->
    <item
        android:id="@+id/action_note_update"
        android:enabled="true"
        android:title="@string/update"
        android:icon="@drawable/ic_save_white_36dp"
        android:orderInCategory="0"
        app:showAsAction="always"/>

    <!-- Cancel Note -->
    <item
        android:id="@+id/action_note_cancel"
        android:enabled="true"
        android:title="@string/cancel"
        android:icon="@drawable/ic_cancel_white_36dp"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"/>

    <!-- Delete Note -->
    <item
        android:id="@+id/action_note_delete"
        android:enabled="true"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_36dp"
        android:orderInCategory="20"
        app:showAsAction="ifRoom"/>

</menu>