<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5D4037"
    tools:context="com.example.foodlife.MainActivity">

    <com.example.foodlife.ResizableImageView
        android:id="@+id/btnRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe"
        app:srcCompat="@drawable/recipes_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentStart="true" />

    <com.example.foodlife.ResizableImageView
        android:id="@+id/btnGrocery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grocery"
        app:srcCompat="@drawable/grocery_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentEnd="true"/>

    <com.example.foodlife.ResizableImageView
        android:id="@+id/btnPantry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pantry"
        app:srcCompat="@drawable/pantry_title"
        android:layout_below="@id/btnRecipe"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="2dp"
        android:layout_alignParentStart="true"/>

    <com.example.foodlife.ResizableImageView
        android:id="@+id/btnUtility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/utility"
        app:srcCompat="@drawable/utility_title"
        android:layout_below="@id/btnGrocery"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentEnd="true"/>


    <ListView
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnPantry"
        android:padding="5dp"
        android:layout_margin="8dp"
        android:background="@drawable/border_box" />

    <Button
        android:id="@+id/btnNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:textColor="@android:color/black"
        android:layout_marginBottom="15dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:text="@string/quick_note"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNote"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/black"
        android:text="TextView" />




</RelativeLayout>
