<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.foodlife.LoginActivity">

    <ImageView
        android:id="@+id/login_cover_image"
        tools:ignore="ContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/coffee"
        android:scaleType="fitStart" />

    <View
        android:id="@+id/login_shade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#000000"
        android:alpha="0.2" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:text="@string/foodlife"
        android:fontFamily="cursive"
        android:textStyle="bold|italic"
        android:textColor="#6bf3c8"
        android:textSize="85sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/guest"
        android:textSize="20sp"
        android:background="@drawable/signin_btn_drawable"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_out"
        android:textSize="20sp"
        android:background="@drawable/signin_btn_drawable"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawableStart="@drawable/ic_google_48dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/sign_in_with_google"
        android:textSize="20sp"
        android:background="@drawable/google_btn_drawable"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/googleEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSignOut"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/enter"
        android:textSize="20sp"
        android:background="@drawable/google_btn_drawable"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
